<resources>
    <string name="app_name">MeetChat</string>

    <!-- Register page -->
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="text_view_sign_up">Sign Up</string>
    <string name="btn_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="title_bar_register">Register</string>
    <string name="err_no_select_image">You did not choose any image</string>

    <!-- Message validate input register new account -->
    <string name="err_msg_please_enter_your_name">Please enter your name</string>
    <string name="err_msg_please_enter_your_email">Please enter your email</string>
    <string name="err_msg_please_enter_your_password">Please enter your password</string>
    <string name="err_msg_the_password_is_not_less_than">the password is not less than 6 number</string>
    <string name="err_msg_please_enter_confirm_password">Please enter your confirm password </string>
    <string name="err_msg_password_and_confirm_password_not_mismatch">Password and confirm password not mismatch</string>
    <string name="msg_create_account_successful">Yore account has bin created and send message for confirm</string>


    <!-- Login page -->
    <string name="title_bar_log_in">Login</string>
    <string name="btn_log_in">Login</string>
    <string name="text_view_sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="forget_password">Forget Password?</string>
    <string name="msg_welcome_user_login">Welcome</string>
    <string name="err_msg_confirm_email">Please confirm your email</string>

    <!-- Forget Password page -->
    <string name="title_bar_forget_password">Forget Password</string>
    <string name="btn_rest_password">Rest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Progress bar -->
    <string name="please_wait">Please wait&#8230;</string>

    <!-- visit user profile page -->
    <string name="title_bar_visit_profile">Profile</string>


</resources>