<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerVarMdel"
            type="com.example.meetchat.registerfragment.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registerfragment.RegisterFragment"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar_register"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple_700">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_bar_register"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:src="@drawable/ic_vector_message_register"
                    app:layout_constraintBottom_toTopOf="@+id/input_enter_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Meet Chat"
                    android:textColor="@color/purple_700"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/input_enter_name"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.508"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_enter_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/et_input_register_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="280dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_enter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_enter_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/et_input_register_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_name"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_name"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_name">

                    <EditText
                        android:id="@+id/et_enter_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_enter_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/et_input_register_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_email"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_email"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_email">

                    <EditText
                        android:id="@+id/et_enter_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_enter_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/et_input_register_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_password"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_password">

                    <EditText
                        android:id="@+id/et_enter_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_confirm_password"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_confirm_password"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_confirm_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_confirm_password"
                    app:layout_constraintVertical_bias="0.112">

                    <Button
                        android:id="@+id/btn_sign_up"
                        android:layout_width="@dimen/btn_register_page_width"
                        android:layout_height="@dimen/btn_register_page_height"
                        android:text="@string/btn_register"
                        android:background="@drawable/button_background"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_registerId">

                        <TextView
                            android:id="@+id/already_have_an_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/already_have_an_account"
                            android:textSize="@dimen/lbl_text_view_textSize"
                            android:textColor="@color/colorSecondaryText"/>

                        <TextView
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="2dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:text="@string/login"
                            android:textStyle="bold"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="@dimen/lbl_text_view_textSize" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>